[package]
name = "doi2bib"
authors = ["A_Daneel"]
version = "0.1.0"
edition = "2021"
description = "A very basic rust app to add a .bib entry from a DOI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
env_logger = "0.9.1"
log = "0.4.17"
reqwest = { version = "0.11.12", features = ["blocking"] }
